--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Wolox</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/logo_full_color.svg">
+  <link rel="icon" type="image/x-icon" href="https://d27i7n2isjbnbi.cloudfront.net/sites/21576/favicon_1602100124.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
