Se cambia title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Wolox</title>
+  <title>Wolox - Entrevista Técnica</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://d27i7n2isjbnbi.cloudfront.net/sites/21576/favicon_1602100124.ico">
